syntax = "proto3";

option csharp_namespace = "Generated";

import public "lin.proto";
import public "google/protobuf/empty.proto";

package lin.generated.test1;

message Req {
    string field1 = 1;
    int32 field2 = 2;
}

message Resp {
    string field1 = 1;
    int32 field2 = 2;
}


service Calc {
    rpc Run (stream Req) returns (stream Resp); // End User needs to implement this one only, all others are autogenerated 
    
    rpc RunWithLineage (stream ReqWithLineage) returns (stream RespWithLineage);

    rpc Echo (Req) returns (Req); // Useful for "is alive" validations
}

message ReqWithLineage {
    oneof case {
        Req request = 1;
        lin.DatasetLineage datasetLineage = 2;
    }
}

message RespWithLineage {
    message RowResponse {
        repeated Resp row = 1;
        repeated lin.RowLineage rowLineage = 2;
    }

    oneof result {
        lin.DatasetLineage datasetLineage = 1; // First message only
        Resp row = 2; 
        RowResponse rowResponse = 3;
    }
}
